--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,19 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/total"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Total: $0.00"
+        android:textSize="18sp"
+        android:layout_margin="35dp"/>
+
     <ListView
         android:id="@+id/listView"
+        android:layout_below="@id/total"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp" />
-
 </RelativeLayout>
+
